# NewbieEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
CMake/: CMakeLists.txt  GetSubdirectories.cmake  Library.cmake  SourceGrouping.cmake
Modules/: CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/Core/Runtime/: CoreRuntime.cpp  CoreRuntime.h
Modules/Sources/: CMakeLists.txt
Modules/Sources/Core/: CMakeLists.txt
Modules/Sources/Core/Editor/: CoreEditor.h
Modules/Sources/Entry/: CMakeLists.txt
Modules/Sources/Entry/Private/: CMakeLists.txt
Modules/Sources/Entry/Public/: CMakeLists.txt  EntryPoint.cpp  PublicClass.cpp
Modules/Sources/NewbieEngine/: CMakeLists.txt
Modules/Sources/NewbieEngine/Private/: PrivateClass.cpp  PrivateClass.h
Modules/Sources/NewbieEngine/Public/: CMakeConfigure.tpl.h  Externals.h  NewbieEngine.h  PublicClass.cpp  PublicClass.h  Settings.h  TestClass.cpp  TestClass.h
Project/: CMakeLists.txt
Project/Editor/: ProjectEditor.cpp  ProjectEditor.h
cmake/: get_subdirectories.cmake  source_grouping.cmake
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/editor/: CoreEditor.cpp
modules/core/runtime/: CMakeLists.txt  ProgramEntry.cpp  main.cpp
project/: CMakeLists.txt
project/runtime/: ProjectRuntime.cpp  ProjectRuntime.h
