# Newbie engine core module.
# Core module has program entry point.

set(NB_CURRENT_MODULE_NAME "core")

# Header / Source container
set(NB_CURRENT_BUILD_HEADERS)
set(NB_CURRENT_BUILD_SOURCES)

# Appending Header / Source in current directory
add_subdirectory("runtime")
add_subdirectory("editor")

file(GLOB NB_HEADERS_IN_CURRENT_DIR "${CMAKE_CURRENT_LIST_DIR}/*.h")
set(NB_CURRENT_BUILD_HEADERS ${NB_HEADERS_IN_CURRENT_DIR} ${NB_CURRENT_BUILD_HEADERS})

file(GLOB NB_SOURCES_IN_CURRENT_DIR "${CMAKE_CURRENT_LIST_DIR}/*.hpp" "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
set(NB_CURRENT_BUILD_SOURCES ${NB_SOURCES_IN_CURRENT_DIR} ${NB_CURRENT_BUILD_SOURCES})

set(NB_CURRENT_BUILD_HEADERS_SOURCES ${NB_CURRENT_BUILD_HEADERS} ${NB_CURRENT_BUILD_SOURCES})

FOREACH(source ${NB_CURRENT_BUILD_HEADERS_SOURCES})
    message(STATUS ${source})
ENDFOREACH()

# Source grouping for IDE
NB_FUNC_GROUP_SOURCE("${NB_CURRENT_BUILD_HEADERS_SOURCES}" "${CMAKE_CURRENT_LIST_DIR}")

# Add library
add_executable(${NB_CURRENT_MODULE_NAME} ${NB_CURRENT_BUILD_HEADERS} ${NB_CURRENT_BUILD_SOURCES})
set_target_properties(${NB_CURRENT_MODULE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
